<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appabout_info"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/androidTitle3"
        android:layout_width="139dp"
        android:layout_height="20dp"
        android:layout_marginTop="400dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/version_1_0"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/androidTitle2"
        android:layout_width="137dp"
        android:layout_height="27dp"
        android:layout_marginTop="216dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/_2023_allemustafa"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/androidTitle"
        android:layout_width="156dp"
        android:layout_height="40dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/android_notes"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>